# mlo-optimizer

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
data/raw/ru/: S_INSTR_V.plain.txt  S_V_ACCUS.plain.txt  S_V_INSTR.plain.txt  adv_adv.plain.txt  adv_verb.plain.txt  business.txt  poems_Block.txt  poems_Pushkin.txt  prose_Chekhov.txt  prose_Lermontove.txt  publicism_Tolstoy.txt
docs/: conf.py  index.rst  mlo_optimizer.components.rst  mlo_optimizer.data.rst  mlo_optimizer.keyboards.rst  mlo_optimizer.rst  modules.rst
mlo_optimizer/: config.py  optimizer.py
mlo_optimizer/components/: genetic_alg.py
mlo_optimizer/data/: read.py
mlo_optimizer/descriptors/: bigram_probs_descriptor.py  coef_descriptor.py  list_descriptor.py  probability_descriptor.py  size_descriptor.py
mlo_optimizer/keyboards/: bigrams.py  distances.py  fitness.py
mool/: config.py  main.py  optimizer.py
mool/components/: algelitism.py
mool/data/: read.py
mool/keyboards/: bigrams.py  distances.py  fitness.py
notebooks/: klo-objective-function-calculation.ipynb
ol_optimizer/: config.py  optimizer.py
ol_optimizer/components/: genetic_alg.py
ol_optimizer/data/: read.py
ol_optimizer/keyboards/: bigrams.py  distances.py  fitness.py
