[tool.poetry]
name = "ol_optimizer"
version = "1.0.0"
description = ""
authors = ["Jaskier <borody.maxim@gmail.com>"]
keywords = ["matrix", "optimization", "genetic", "keyboard"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    {include = "ol_optimizer"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
pandas = "^2.0.0"
tqdm = "^4.65.0"
nltk = "^3.8.1"
deap = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
