[tool.poetry]
name = "mlo-optimizer"
version = "1.0.1"
description = ""
license = "Apache License 2.0"
authors = ["Jaskier <borody.maxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaskierM/mlo-optimizer"
keywords = ["matrix", "optimization", "genetic", "keyboard"]

packages = [
    {include = "mlo_optimizer"}
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.2"
pandas = "^2.0.0"
tqdm = "^4.65.0"
nltk = "^3.8.1"
deap = "^1.3.3"


[tool.poetry.group.flake8.dependencies]
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"
flake8-bugbear = "^23.1.17"
flake8-commas = "^2.1.0"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.5"
flake8-import-order = "^0.18.2"
flake8-builtins = "^2.1.0"


[tool.flake8]
exclude = [".git", ".venv", ".idea", "docs", "build", "dist", ".pytest_cache"]
max-line-length = 120


[tool.poetry.group.sphinx.dependencies]
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
